--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://ihiteish.github.io/weather_app/style.css">
+    <link rel="stylesheet" href="https://iam-hitesh.github.io/weather_app/style.css">
     <title>Today's Weather</title>
   </head>
   <body>
@@ -54,6 +54,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="https://ihiteish.github.io/weather_app/main.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://iam-hitesh.github.io/weather_app/main.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
